--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     "require": {
         "php": "^8.1",
         "codeigniter4/framework": "^4.0",
+        "hashids/hashids": "^5.0",
         "myth/auth": "^1.2"
     },
     "require-dev": {
